deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serge3a
  namespace: user-tpradeau
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serge3a
  template:
    metadata:
      labels:
        app: serge3a
    spec:
      # J'ai supprimé ici le securityContext (runAsNonRoot et runAsUser)
      containers:
      - name: serge3a
        image: tpradeau/serge3a:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5003
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /_stcore/health
            port: 5003
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_stcore/health
            port: 5003
          initialDelaySeconds: 5
          periodSeconds: 5
