deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serge3a-service
  namespace: user-tpradeau
spec:
  selector:
    app: serge3a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
  type: ClusterIP
