deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serge3a-ingress
  annotations:
    # On ajoute ces deux lignes pour corriger ton erreur "No available server"
    # car Streamlit a besoin de maintenir une connexion ouverte (Websocket)
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - serge3a-tpradeau.lab.sspcloud.fr 
  rules:
  - host: serge3a-tpradeau.lab.sspcloud.fr 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: serge3a-service # Vérifie que c'est bien le nom dans service.yaml
            port:
              number: 80
